cabal-version:       2.4
name:                APL
version:             0.1.0.0
                      
License:             BSD-3-Clause
License-File:        LICENSE
Author:              SeungheonOh
Maintainer:          dan.oh0721@gmail.com
Copyright:           (c) Seungheon Oh 2021-2022
Homepage:            https://www.github.com/SeungheonOh/APL                          
Synopsis:            APL implemented in Haskell
Description:         APL-like multi dementional array structure with APL operators
Bug-reports:         https://www.github.com/SeungheonOh/APL/issues
Category:            Data, Data Structures
                      
Extra-source-files:  CHANGELOG.md

library
    exposed-modules:  Data.APL.Operator
                      Data.APL.Parser
                      Data.APL.Quote
                      Data.APL.Array
                      Data.APL

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      megaparsec,
                      vector,
                      text,
                      template-haskell,
                      syb
    hs-source-dirs:   src
    default-language: Haskell2010

executable APL
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        APL

    hs-source-dirs:   app
    default-language: Haskell2010
